--- a/web/package.json
+++ b/web/package.json
@@ -7,15 +7,16 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "chart.js": "^3.2.1",
-    "react": "^17.0.2",
-    "react-chartjs-2": "^3.0.3",
+    "apexcharts": "^3.26.2",
     "bootstrap": "^5.0.0",
+    "chart.js": "^3.2.1",
     "leaflet": "^1.7.1",
     "mapbox-gl": "^2.2.0",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^1.6.0",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
     "react-leaflet": "^3.1.0",
