--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.0.0",
     "chart.js": "^3.2.1",
+    "deck.gl": "^8.4.16",
     "leaflet": "^1.7.1",
     "mapbox-gl": "^2.2.0",
     "mapmyindia-react": "^1.0.6",
