--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "apexcharts": "^3.26.2",
     "bootstrap": "^5.0.0",
+    "cassandra-driver": "^4.6.2",
     "chart.js": "^3.2.1",
     "leaflet": "^1.7.1",
     "mapbox-gl": "^2.2.0",
