--- a/web/package.json
+++ b/web/package.json
@@ -10,11 +10,11 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "apexcharts": "^3.26.2",
     "bootstrap": "^5.0.0",
     "cassandra-driver": "^4.6.2",
     "chart.js": "^3.2.1",
     "deck.gl": "^8.4.16",
-    "apexcharts": "^3.26.2",
     "leaflet": "^1.7.1",
     "mapbox-gl": "^2.2.0",
     "mapmyindia-react": "^1.0.6",
@@ -25,6 +25,7 @@
     "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
+    "react-google-button": "^0.7.2",
     "react-leaflet": "^3.1.0",
     "react-map-gl": "^6.1.15",
     "react-scripts": "4.0.3",
