--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
@@ -12,20 +13,20 @@
     "@testing-library/user-event": "^12.1.10",
     "apexcharts": "^3.26.2",
     "bootstrap": "^5.0.0",
-    "cassandra-driver": "^4.6.2",
     "chart.js": "^3.2.1",
     "deck.gl": "^8.4.16",
+    "i": "^0.3.6",
     "leaflet": "^1.7.1",
     "mapbox-gl": "^2.2.0",
     "mapmyindia-react": "^1.0.6",
     "node-sass": "4.14.1",
+    "npm": "^7.13.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^1.6.0",
     "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
-    "react-google-button": "^0.7.2",
     "react-leaflet": "^3.1.0",
     "react-map-gl": "^6.1.15",
     "react-scripts": "4.0.3",
