--- a/web/package.json
+++ b/web/package.json
@@ -10,11 +10,11 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "apexcharts": "^3.26.2",
     "bootstrap": "^5.0.0",
     "cassandra-driver": "^4.6.2",
     "chart.js": "^3.2.1",
     "deck.gl": "^8.4.16",
-    "apexcharts": "^3.26.2",
     "leaflet": "^1.7.1",
     "mapbox-gl": "^2.2.0",
     "mapmyindia-react": "^1.0.6",
@@ -27,7 +27,9 @@
     "react-feather": "^2.0.9",
     "react-leaflet": "^3.1.0",
     "react-map-gl": "^6.1.15",
+    "react-pro-sidebar": "^0.6.0",
     "react-scripts": "4.0.3",
+    "utf8": "^3.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
