--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "apexcharts": "^3.26.2",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.0",
     "chart.js": "^3.2.1",
     "deck.gl": "^8.4.16",
@@ -29,6 +30,8 @@
     "react-feather": "^2.0.9",
     "react-leaflet": "^3.1.0",
     "react-map-gl": "^6.1.15",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
