--- a/web/package.json
+++ b/web/package.json
@@ -18,21 +18,25 @@
     "bootstrap": "^5.0.0",
     "chart.js": "^3.2.1",
     "deck.gl": "^8.4.16",
+    "here-maps-react": "^2.0.0",
     "i": "^0.3.6",
     "leaflet": "^1.7.1",
     "mapbox-gl": "^2.2.0",
     "mapmyindia-react": "^1.0.6",
     "node-sass": "4.14.1",
     "npm": "^7.13.0",
+    "popmotion": "^9.3.6",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^1.6.0",
     "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
+    "react-here-maps": "^0.4.0",
     "react-leaflet": "^3.1.0",
     "react-map-gl": "^6.1.15",
     "react-pro-sidebar": "^0.6.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "utf8": "^3.0.0",
     "web-vitals": "^1.0.1"
